--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-<script type="text/javascript" src="assets/js/Ball.js"></script>
-<script type="text/javascript" src="assets/js/BonusBalls.js"></script>
-<script type="text/javascript" src="assets/js/UserBall.js"></script>
-<script type="text/javascript" src="assets/js/Game.js"></script>
+	<script type="text/javascript" src="assets/js/Ball.js"></script>
+	<script type="text/javascript" src="assets/js/UserBall.js"></script>
+	<script type="text/javascript" src="assets/js/SmallBall.js"></script>
+	<script type="text/javascript" src="assets/js/HPBall.js"></script>
+	<script type="text/javascript" src="assets/js/SpeedBall.js"></script>
+	<script type="text/javascript" src="assets/js/MoneyBall.js"></script>
+	
+	
 </head>
 <body>
 	<canvas id="game-area" width="1000px" height="650px"></canvas>
+	<script type="text/javascript" src="assets/js/Game.js"></script>
 </body>
 </html>
