--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-	<script type="text/javascript" src="assets/js/Ball.js"></script>
-	<script type="text/javascript" src="assets/js/UserBall.js"></script>
-	<script type="text/javascript" src="assets/js/SmallBall.js"></script>
-	<script type="text/javascript" src="assets/js/HPBall.js"></script>
-	<script type="text/javascript" src="assets/js/SpeedBall.js"></script>
-	<script type="text/javascript" src="assets/js/MoneyBall.js"></script>
-	
-	
+<script type="text/javascript" src="assets/js/Vignette/Vignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/CarDayVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/CarMonthVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/CarYearVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/BusDayVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/BusMonthVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/BusYearVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/TruckDayVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/TruckMonthVignette.js"></script>
+<script type="text/javascript" src="assets/js/Vignette/TruckYearVignette.js"></script>
 </head>
 <body>
-	<canvas id="game-area" width="1000px" height="650px"></canvas>
-	<script type="text/javascript" src="assets/js/Game.js"></script>
+
 </body>
 </html>
